--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,72 @@ padding: 3px 15px;
   width: 100%;
 }
 
+.card__preloader {
+  text-align: center;
+  padding: 70px 150px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 35px;
+}
+
+/* loader */
+
+.card__span {
+  display: inline-block;
+  animation: bounce 1.5s infinite alternate;
+}
+
+.card__span:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.card__span:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+.card__span:nth-child(4) {
+  animation-delay: 0.3s;
+}
+
+.card__span:nth-child(5) {
+  animation-delay: 0.4s;
+}
+
+.card__span:nth-child(6) {
+  animation-delay: 0.5s;
+}
+
+.card__span:nth-child(7) {
+  animation-delay: 0.6s;
+}
+
+.card__span:nth-child(8) {
+  animation-delay: 0.7s;
+}
+
+.card__span:nth-child(9) {
+  animation-delay: 0.8s;
+}
+
+.card__span:nth-child(10) {
+  animation-delay: 0.9s;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform:translateY(0);
+  }
+
+  40% {
+    transform: translateY(-20px);
+  }
+
+  60% {
+    transform: translateY(-10px);
+  }
+}
+
+/* widget */
+
 .card__widget {
   padding: 70px 50px 150px;
   background-color: rgba(255, 255, 255, 0.8);
