--- a/css/style.css
+++ b/css/style.css
@@ -11,79 +11,6 @@ body {
   height: 100vh;
 }
 
-/* modal window */
-
-.modal__window {
-  display: none;
-  background-color: #ffffff;
-  width: 90vw;
-  margin: 0 auto;
-  border-radius: 10px;
-}
-
-.modal__wrapper {
-  text-align: left;
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px 20px;
-}
-
-.modal__request-text {
-  font-size: 30px;
-  font-weight: 400;
-  margin-bottom: 33px;
-}
-
-.modal__permission {
-  display: flex;
-  font-size: 25px;
-  font-weight: 300;
-  margin-bottom: 12px;
-}
-
-.modal__location-svg {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.modal__btns {
-  display: flex;
-  justify-content: end;
-  font-size: 25px;
-  font-weight: 500;
-}
-
-.modal__access-allowed {
-  margin-right: 11px;
-}
-
-.modal__access-allowed,
-.modal__access-denied {
-  color: #0057FF;
-  border: 1px solid rgba(0, 0, 0, 0.6);
-  border-radius: 5px;
-  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
--webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
--moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
-padding: 3px 15px;
-}
-
-.modal__access-allowed:focus,
-.modal__access-denied:focus {
-  outline: 3px solid rgba(51, 51, 51, 0.4);
-}
-
-.modal__access-allowed:hover,
-.modal__access-denied:hover {
-  background-color: rgba(51, 51, 51, 0.1);
-}
-
-.modal__access-allowed:active,
-.modal__access-denied:active {
-  outline: transparent;
-  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.2);
-}
-
 /* widget */
 
 .card__wrapper {
@@ -94,18 +21,21 @@ padding: 3px 15px;
   width: 100%;
 }
 
+/* loader */
+
 .card__preloader {
   text-align: center;
   padding: 70px 150px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 35px;
+  display: flex;
+  justify-content: center;
 }
-
-/* loader */
 
 .card__span {
   display: inline-block;
   animation: bounce 1.5s infinite alternate;
+  padding: 5px;
 }
 
 .card__span:nth-child(2) {
@@ -253,9 +183,19 @@ padding: 3px 15px;
 
 .card__access-denied {
   display: none;
+  padding: 70px 50px 150px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 35px;
   text-align: center;
   margin-top: 90px;
   margin-bottom: 90px;
+}
+
+@media (max-width: 998px) {
+  .card__widget {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 
 @media (max-width: 768px) or (orientation: landscape) {
